manifests/admin-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
