manifests/admin-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: admin-basic-auth
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    # Uncomment next if you use https://cert-manager.io/
    #cert-manager.io/cluster-issuer: "<YOUR CLUSTER ISSUER>"
    #cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: admin.topi-banana.com
    http:
      paths:
      - path: /argocd/
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
      # - path: /filebrowser
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: argocd-server
      #       port:
      #         name: https
  #tls:
  # hosts:
  #  - admin.topi-banana.com
  #  secretName: admin-tls
